--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>Hello world</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, ea cumque eos odit minima neque accusamus 
         fugit vel maxime vero soluta ipsa animi laborum corrupti dolor amet libero pariatur corporis.</p>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta sapiente laudantium qui suscipit quae totam quidem eveniet nobis eius, 
+        quibusdam provident sed voluptates doloremque consequatur officiis consequuntur quis atque hic.</h2>
 </body>
 </html>
